--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/FLORIS-{{ version }}.tar.gz
   sha256: 71c5b545ef37db1b6896ea71831b79e8c4963e2aac87a673fdeacb9e28c26038
+  # Download the tar-ball and do `openssl sha256 file.tar.gz` to update
 
 build:
   number: 0
@@ -17,20 +18,19 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.8
     - pip
   run:
-    - python >=3.6
+    - python >=3.8
+    - attrs >=21.3
     - coloredlogs >=10.0
     - matplotlib-base >=3
-    - numpy >=1.16
+    - numexpr >=2.7
+    - numpy >=1.20
     - pandas >=0.24
-    - pyproj >=2.1
-    - pytest >=4
+    - pyyaml >=5.3
     - scipy >=1.1
-    - seaborn >=0.9
     - shapely >=1.7.1
-    - scikit-learn
 
 test:
   imports:
@@ -49,7 +49,7 @@ about:
   license_family: APACHE
   license_file: LICENSE.txt
   summary: A controls-oriented engineering wake model.
-  doc_url: https://floris.readthedocs.io
+  doc_url: https://nrel.github.io/floris
   dev_url: https://github.com/NREL/FLORIS
 
 extra:
