--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,14 +23,15 @@ requirements:
   run:
     - python >=3.8
     - attrs >=21.3
-    - coloredlogs >=10.0
+    - coloredlogs >=15.0
     - matplotlib-base >=3
     - numexpr >=2.7
     - numpy >=1.20
-    - pandas >=0.24
+    - pandas >=2.0
+    - pathos >=0.3
     - pyyaml >=6.0
     - scipy >=1.1
-    - shapely >=1.7.1
+    - shapely >=2.0
 
 test:
   imports:
