--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ build:
 
 requirements:
   host:
-    - python {{ python_min }}
+    - python >=3.8
     - pip
     - setuptools
   run:
-    - python >={{ python_min }}
+    - python >=3.8
     - attrs >=21.3
     - coloredlogs >=15.0
     - matplotlib-base >=3
@@ -35,8 +35,6 @@ requirements:
     - shapely >=2.0
 
 test:
-  requires:
-    - python {{ python_min }}
   imports:
     - floris
   # has a bogus defined dep on sklearn instead of scikit-learn
