--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "floris" %}
 {% set version = "4.2.2" %}
+{% set python_min = "3.8" %}
 
 
 package:
@@ -18,11 +19,11 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python {{ python_min }}
     - pip
     - setuptools
   run:
-    - python >=3.8
+    - python >={{ python_min }}
     - attrs >=21.3
     - coloredlogs >=15.0
     - matplotlib-base >=3
@@ -35,13 +36,14 @@ requirements:
     - shapely >=2.0
 
 test:
+  requires:
+  - python {{ python_min }}
+  #   - pip
   imports:
     - floris
   # has a bogus defined dep on sklearn instead of scikit-learn
   # commands:
   #   - pip check
-  # requires:
-  #   - pip
 
 about:
   home: https://github.com/NREL/FLORIS
