--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - coloredlogs >=15.0
     - matplotlib-base >=3
     - numexpr >=2.7
-    - numpy >=2.0
+    - numpy ~=2.0
     - pandas >=2.0
     - pathos >=0.3
     - pyyaml >=6.0
